@@ -3,8 +3,7 @@ import dectate
 import morepath
 from morepath.request import Response
 from morepath import generic
-from morepath.security import (Identity, BasicAuthIdentityPolicy,
-                               NO_IDENTITY)
+from morepath.security import (Identity, NO_IDENTITY)
 from .fixtures import identity_policy
 import base64
 import json
@@ -13,7 +12,6 @@ try:
     from cookielib import CookieJar
 except ImportError:
     from http.cookiejar import CookieJar
-from webob.exc import HTTPForbidden
 
 
 def setup_module(module):
@@ -142,209 +140,6 @@ def test_policy_action():
     response = c.get('/foo')
     assert response.body == b'Model: foo'
     response = c.get('/bar', status=403)
-
-
-def test_basic_auth_identity_policy():
-    class app(morepath.App):
-        pass
-
-    class Model(object):
-        def __init__(self, id):
-            self.id = id
-
-    class Permission(object):
-        pass
-
-    @app.path(model=Model, path='{id}',
-              variables=lambda model: {'id': model.id})
-    def get_model(id):
-        return Model(id)
-
-    @app.permission_rule(model=Model, permission=Permission)
-    def get_permission(identity, model, permission):
-        return identity.userid == 'user' and identity.password == 'secret'
-
-    @app.view(model=Model, permission=Permission)
-    def default(self, request):
-        return "Model: %s" % self.id
-
-    @app.identity_policy()
-    def policy():
-        return BasicAuthIdentityPolicy()
-
-    @app.verify_identity()
-    def verify_identity(identity):
-        assert identity is not NO_IDENTITY
-        return True
-
-    @app.view(model=HTTPForbidden)
-    def make_unauthorized(self, request):
-        @request.after
-        def set_status_code(response):
-            response.status_code = 401
-        return "Unauthorized"
-
-    dectate.commit(app)
-
-    c = Client(app())
-
-    response = c.get('/foo', status=401)
-
-    headers = {'Authorization': 'Basic ' +
-               str(base64.b64encode(b'user:wrong').decode())}
-    response = c.get('/foo', headers=headers, status=401)
-
-    headers = {'Authorization': 'Basic ' +
-               str(base64.b64encode(b'user:secret').decode())}
-    response = c.get('/foo', headers=headers)
-    assert response.body == b'Model: foo'
-
-
-def test_basic_auth_identity_policy_errors():
-    class app(morepath.App):
-        pass
-
-    class Model(object):
-        def __init__(self, id):
-            self.id = id
-
-    class Permission(object):
-        pass
-
-    @app.path(model=Model, path='{id}',
-              variables=lambda model: {'id': model.id})
-    def get_model(id):
-        return Model(id)
-
-    @app.permission_rule(model=Model, permission=Permission)
-    def get_permission(identity, model, permission):
-        return identity.userid == 'user' and identity.password == u'sëcret'
-
-    @app.view(model=Model, permission=Permission)
-    def default(self, request):
-        return "Model: %s" % self.id
-
-    @app.identity_policy()
-    def policy():
-        return BasicAuthIdentityPolicy()
-
-    @app.verify_identity()
-    def verify_identity(identity):
-        return True
-
-    dectate.commit(app)
-
-    c = Client(app())
-
-    response = c.get('/foo', status=403)
-
-    headers = {'Authorization': 'Something'}
-    response = c.get('/foo', headers=headers, status=403)
-
-    headers = {'Authorization': 'Something other'}
-    response = c.get('/foo', headers=headers, status=403)
-
-    headers = {'Authorization': 'Basic ' + 'nonsense'}
-    response = c.get('/foo', headers=headers, status=403)
-
-    headers = {'Authorization': 'Basic ' + 'nonsense1'}
-    response = c.get('/foo', headers=headers, status=403)
-
-    # fallback to utf8
-    headers = {
-        'Authorization': 'Basic ' + str(base64.b64encode(
-            u'user:sëcret'.encode('utf8')).decode())}
-    response = c.get('/foo', headers=headers)
-    assert response.body == b'Model: foo'
-
-    # fallback to latin1
-    headers = {
-        'Authorization': 'Basic ' + str(base64.b64encode(
-            u'user:sëcret'.encode('latin1')).decode())}
-    response = c.get('/foo', headers=headers)
-    assert response.body == b'Model: foo'
-
-    # unknown encoding
-    headers = {
-        'Authorization': 'Basic ' + str(base64.b64encode(
-            u'user:sëcret'.encode('cp500')).decode())}
-    response = c.get('/foo', headers=headers, status=403)
-
-    headers = {
-        'Authorization': 'Basic ' + str(base64.b64encode(
-            u'usersëcret'.encode('utf8')).decode())}
-    response = c.get('/foo', headers=headers, status=403)
-
-    headers = {
-        'Authorization': 'Basic ' + str(base64.b64encode(
-            u'user:sëcret:'.encode('utf8')).decode())}
-    response = c.get('/foo', headers=headers, status=403)
-
-
-def test_basic_auth_remember():
-    class app(morepath.App):
-        pass
-
-    @app.path(path='{id}',
-              variables=lambda model: {'id': model.id})
-    class Model(object):
-        def __init__(self, id):
-            self.id = id
-
-    @app.view(model=Model)
-    def default(self, request):
-        # will not actually do anything as it's a no-op for basic
-        # auth, but at least won't crash
-        response = Response()
-        generic.remember_identity(response, request, Identity('foo'),
-                                  lookup=request.lookup)
-        return response
-
-    @app.identity_policy()
-    def policy():
-        return BasicAuthIdentityPolicy()
-
-    dectate.commit(app)
-
-    c = Client(app())
-
-    response = c.get('/foo', status=200)
-    assert response.body == b''
-
-
-def test_basic_auth_forget():
-    class app(morepath.App):
-        pass
-
-    @app.path(path='{id}')
-    class Model(object):
-        def __init__(self, id):
-            self.id = id
-
-    @app.view(model=Model)
-    def default(self, request):
-        # will not actually do anything as it's a no-op for basic
-        # auth, but at least won't crash
-        response = Response(content_type='text/plain')
-        generic.forget_identity(response, request, lookup=request.lookup)
-        return response
-
-    @app.identity_policy()
-    def policy():
-        return BasicAuthIdentityPolicy()
-
-    dectate.commit(app)
-
-    c = Client(app())
-
-    response = c.get('/foo', status=200)
-    assert response.body == b''
-
-    assert sorted(response.headers.items()) == [
-        ('Content-Length', '0'),
-        ('Content-Type', 'text/plain; charset=UTF-8'),
-        ('WWW-Authenticate', 'Basic realm="Realm"'),
-    ]
 
 
 class DumbCookieIdentityPolicy(object):
